--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         );
         sucesso.getSexo = function(){
             if (this.get("sexo") === "menino") {
-                return "do seu menino";
+                return "do seu filho";
             } else {
-                return "da sua menina";
+                return "da sua filha";
             }
         }
         chatbot.registerState("sucesso",sucesso);
