--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
 </head>
 <body>
     <div id="chatbot" v-bind:class="{minimized: isMinimized}">
-        <div class="title">
+        <div class="title" v-on:click="toggleMinimize()">
             {{title}}
+            <div class="close">x</div>
         </div>
         <div id="chatbot-messages">
-            <div class="message" v-for="message in messages" v-bind:id="message.id">
-                <span class="author">{{message.author}}</span>
-                <div v-html="message.msg"></div>
-            </div>
+            <component :is="message.component" :message="message" v-for="message in messages"></component>
         </div>
     </div>
     <script type="text/javascript" src="js/message.js"></script>
@@ -29,86 +27,109 @@
 
     <script type="text/javascript">
         /* CADA UM DESSES ESTADOS DEVERIA FICAR EM UM ARQUIVO SEPARADO*/
-        var inicio = new estadoChatbot(
+        var inicio = new estadoChatbot("inicio",
             "Oie! Você está planejando o aniversário do seu filho?.\
-         <button v-on:click=\"_('sim')\"> Sim! </button>"
+            <button v-on:click=\"sim()\"> Sim! </button>"
        );
-        inicio.sim = function(){
-            this.chatbot.values.inicio = 1;
+       inicio.methods.sim = function(){
+            this.chatbot.set("inicio",1);
             this.chatbot.triggerState("inicio-sim");
         }
-        chatbot.registerState("inicio",inicio);
+        chatbot.registerState(inicio);
 
 
-        var sim = new estadoChatbot(
+        var sim = new estadoChatbot("inicio-sim",
             "Que legal, é um menino ou menina?\
-            <button v-on:click=\"_('menino')\"> Menino </button>\
-            <button v-on:click=\"_('menina')\"> Menina </button>\
+            <button v-on:click=\"menino()\"> Menino </button>\
+            <button v-on:click=\"menina()\"> Menina </button>\
             ");
 
-        sim.menino = function(evt) {
-            this.set("sexo","menino");
+        sim.methods.menino = function(evt) {
+            this.chatbot.set("sexo","menino");
             this.chatbot.triggerState("idade");
         }
-        sim.menina = function(){
-            this.set("sexo","menina");
+        sim.methods.menina = function(){
+            this.chatbot.set("sexo","menina");
             this.chatbot.triggerState("idade");
         }
-        chatbot.registerState("inicio-sim",sim);
+        chatbot.registerState(sim);
 
 
-        var idade = new estadoChatbot(
-            "E quantos aninhos {{_('pronome')}} tem?\
-            <input class='form-control' type='number' v-model=\"options.idade\"/> \
-            <button v-on:click=\"_('confirmar')\">Confirmar</button>\
+        var idade = new estadoChatbot("idade",
+            "E quantos aninhos {{pronome()}} tem?\
+            <input class='form-control' required='' v-bind:class=\"{'error':!validaIdade()}\" type='number' v-model=\"idade\" /> \
+            <button v-on:click=\"confirmar()\">Confirmar</button>\
             "
         );
-        idade.pronome = function(){
-            return (this.get("sexo") === "menino") ? "ele" : "ela";
+        idade.data.idade = null;
+        idade.methods.pronome = function(){
+            return (this.chatbot.get("sexo") === "menino") ? "ele" : "ela";
         }
-        idade.confirmar = function(){
-            this.set("idade",this.getOption('idade'));
-            this.chatbot.triggerState("data");
+        idade.methods.confirmar = function(){
+            if (this.idade) {
+                this.chatbot.set("idade",this.idade);
+                this.chatbot.triggerState("data");
+            } else {
+                this.idade = "";
+            }
         }
-        chatbot.registerState("idade",idade);
+        idade.methods.validaIdade = function(){
+            if (this.idade === null) {
+                return true;
+            }
+            return (this.idade) ? true : false;
+        }
+
+        chatbot.registerState(idade);
 
 
-        var data = new estadoChatbot(
-            "Que legal, {{get('idade')}} aninhos é uma idade mágica!\
+        var data = new estadoChatbot("data",
+            "Que legal, {{chatbot.get('idade')}} aninhos é uma idade mágica!\
             E quando vai ser a festa? \
-            <input type='date' v-model='options.data'/>\
-            <button v-on:click=\"_('confirmar')\">Confirmar</button>\
+            <input type='date' v-model='dataFesta' v-bind:class=\"{'error':!validaData()}\"/>\
+            <button v-on:click=\"confirmar()\">Confirmar</button>\
             "
         );
 
-        data.confirmar = function(){
-            this.set("data",this.getOption('data'));
-            this.chatbot.triggerState("contato");
+        data.methods.confirmar = function(){
+            if (this.dataFesta) {
+                this.chatbot.set("data",this.dataFesta);
+                this.chatbot.triggerState("contato");
+            } else {
+                this.dataFesta = "";
+            }
         }
-        chatbot.registerState("data",data);
+        data.methods.validaData = function(){
+            if (this.dataFesta === null) {
+                return true;
+            }
+            return (this.dataFesta) ? true : false;
+        }
+        data.data.dataFesta = null;
+        chatbot.registerState(data);
 
-        var contato = new estadoChatbot(
-            "Dia {{_('getFormatedDate')}}, que legal é {{_('getWeekDay')}}. <br />\
+        var contato = new estadoChatbot("contato",
+            "Dia {{getFormatedDate()}}, que legal é {{getWeekDay()}}. <br />\
             Quer deixar um contato para te elaborarmos uma proposta?  <br />\
             Pode ficar tranquila, o orçamento é sem compromisso! \
-            <button v-on:click=\"_('whatsapp')\">Sim, um whatsapp</button>\
-            <button v-on:click=\"_('email')\">Sim, um email</button>\
+            <button v-on:click=\"whatsapp()\">Sim, um whatsapp</button>\
+            <button v-on:click=\"email()\">Sim, um email</button>\
             "
         );
 
-        contato.getDateObject = function(){
-            data = this.get('data');
+        contato.methods.getDateObject = function(){
+            data = this.chatbot.get("data");
             data = data.split('-');
             data = new Date(data[0],data[1],data[2]);
             return data;
         }
 
-        contato.getFormatedDate = function(){
+        contato.methods.getFormatedDate = function(){
             date = this.getDateObject();
             return date.getDate()+"/"+date.getMonth();
         }
 
-        contato.getWeekDay = function(){
+        contato.methods.getWeekDay = function(){
             weekDays = [
                 "um domingo",
                 "uma segunda",
@@ -121,58 +142,89 @@
             return weekDays[date.getDay()];
         }
 
-        contato.email = function(){
-            this.set("tipoContato","email");
+        contato.methods.email = function(){
+            this.chatbot.set("tipoContato","email");
             this.chatbot.triggerState("nome");
         }
 
-        contato.whatsapp = function(){
-            this.set("tipoContato","whatsapp");
+        contato.methods.whatsapp = function(){
+            this.chatbot.set("tipoContato","whatsapp");
             this.chatbot.triggerState("nome");
         }
-        chatbot.registerState("contato",contato);
+        chatbot.registerState(contato);
 
 
-        var nome = new estadoChatbot(
-            "Certo! Entraremos em contato por {{get('tipoContato')}}\
-            Para finalizar só precisamos saber seu nome e {{get('tipoContato')}}.\
-            <input type='text' class='form-control' v-model='options.contato' :placeholder=\"_('getPlaceholderContato')\"/>\
-            <input type='text' class='form-control' v-model='options.nome' placeholder='Seu nome'/>\
-            <button v-on:click=\"_('confirmar')\">Confirmar</button>\
+        var nome = new estadoChatbot("nome",
+            "Certo! Entraremos em contato por {{chatbot.get('tipoContato')}}\
+            Para finalizar só precisamos saber seu nome e {{chatbot.get('tipoContato')}}.\
+            <input type='text' class='form-control' v-model='contato' v-bind:class=\"{'error':!validaContato()}\" :placeholder=\"getPlaceholderContato()\"/>\
+            <input type='text' class='form-control' v-bind:class=\"{'error':!validaNome()}\" v-model='nome' placeholder='Seu nome'/>\
+            <button v-on:click=\"confirmar()\">Confirmar</button>\
             "
         );
-        nome.getPlaceholderContato = function(){
-            if (this.get('tipoContato') === "whatsapp") {
-                return "(xx) xxxxx-xxxx";
-            }
-            return "seuemail@gmail.com";
-        }
-        nome.confirmar = function(){
-            this.set("nome",this.getOption('nome'));
-            this.set("contato",this.getOption('contato'));
-            console.log(this.chatbot.values);
-            this.chatbot.triggerState("sucesso");
-        }
-        chatbot.registerState("nome",nome);
 
-        var sucesso = new estadoChatbot(
-            "Combinado {{get('nome')}}, em até dois dias entraremos em contato pelo {{get('tipoContato')}}: {{get('contato')}}!\
-            Com certeza a festinha {{_('getSexo')}} vai ser um sucesso!\
+        nome.data = {
+            "contato": null,
+            "nome": null
+        }
+
+        nome.methods = {
+            getPlaceholderContato: function(){
+                if (this.chatbot.get('tipoContato') === "whatsapp") {
+                    return "(xx) xxxxx-xxxx";
+                }
+                return "seuemail@gmail.com";
+            },
+            validaNome: function(){
+                if (this.nome === null) {
+                    return true;
+                }
+                return (this.nome) ? true : false;
+            },
+            validaContato: function(){
+                if (this.contato === null) {
+                    return true;
+                }
+                return (this.contato) ? true : false;
+            },
+            confirmar: function(){
+                var valido = true;
+                if (!this.nome) {
+                    valido = false;
+                    this.nome = "";
+                }
+                if (!this.contato) {
+                    valido = false;
+                    this.contato = "";
+                }
+                if (valido) {
+                    this.chatbot.set("nome",this.nome);
+                    this.chatbot.set("contato",this.contato);
+                    this.chatbot.triggerState("sucesso");
+                }
+            },
+        };
+
+        chatbot.registerState(nome);
+
+        var sucesso = new estadoChatbot("sucesso",
+            "Combinado {{chatbot.get('nome')}}, em até dois dias entraremos em contato pelo {{chatbot.get('tipoContato')}}: {{chatbot.get('contato')}}!\
+            Com certeza a festinha {{getSexo()}} vai ser um sucesso!\
             "
         );
-        sucesso.getSexo = function(){
-            if (this.get("sexo") === "menino") {
+        sucesso.methods.getSexo = function(){
+            if (this.chatbot.get("sexo") === "menino") {
                 return "do seu filho";
             } else {
                 return "da sua filha";
             }
         }
-        chatbot.registerState("sucesso",sucesso);
+        chatbot.registerState(sucesso);
 
         window.setTimeout(function(){
             chatbot.minimized = false;
             chatbot.triggerState("inicio");
-        },3000);
+        },300);
 
     </script>
 </body>
